crates/squealy/tests/compile_fail/row_lock_rejected_with_aggregate.stderr
error[E0271]: type mismatch resolving `<Expr<'_, CountExpr<JobId>, AggregateExprAst<ColumnExprAst<JobId>>> as ProjectionClass>::Class == ScalarProjection`
  --> tests/compile_fail/row_lock_rejected_with_aggregate.rs:16:10
   |
16 |         .select(|(job,)| job.id.count());
   |          ^^^^^^ expected `ScalarProjection`, found `AggregateProjection`
   |
   = note: required for `RowLocked` to implement `squealy::RowLockSelectValid<NotDistinct, Ungrouped, NotOuterJoined, Expr<'_, CountExpr<JobId>, squealy::AggregateExprAst<squealy::ColumnExprAst<JobId>>>>`
note: required by a bound in `squealy::SourceQuery::select`
  --> $WORKSPACE/crates/squealy-core/src/query.rs
   |
   |       fn select<P, Indices>(
   |          ------ required by a bound in this associated function
...
   |           <Self as SelectAst<'conn, 'scope, Conn>>::RowLockState: crate::RowLockSelectValid<
   |  _________________________________________________________________^
   | |             <Self as SelectAst<'conn, 'scope, Conn>>::Distinctness,
   | |             <Self as SelectAst<'conn, 'scope, Conn>>::Grouped,
   | |             <Self as SelectAst<'conn, 'scope, Conn>>::OuterJoinState,
   | |             P,
   | |         >,
   | |_________^ required by this bound in `SourceQuery::select`
